--- a/test.html
+++ b/test.html
@@ -8,10 +8,10 @@
     <body>
         <header>
             <nav class="nav">
-                <h1><img src="./Vector.png"> <img src="./Vector 2.png"> <img src="./SCISSOR.png"></h1>
+                <h1><img src="./Images/Vector.png"> <img src="./Images/Vector 2.png"> <img src="./Images/SCISSOR.png"></h1>
                 <ul>
                 <li><a href="#" class="link">My URLs</a></li>
-                <li>Features <img src="./Vector (1).png"/></li>
+                <li>Features <img src="./Images/Vector (1).png"/></li>
                 <li>Pricing</li>
                 <li>Analytics</li>
                 <li>FAQs</li>
@@ -25,7 +25,7 @@
                 Optimize Your Online Experience with Our Advanced <span class="url">URL Shortening </span> 
                 Solution 
             </h1>
-            <img src="./Vector 3.png" class="stroke">
+            <img src="./Images/Vector 3.png" class="stroke">
             <p class="pgh">
                 Personalize your shortened URLs to align with your brand identity. Utilize custom slugs, branded links, 
                 and domain customization options to reinforce your brand presence and enhance user engagement.
@@ -35,16 +35,16 @@
                 <a href="#" class="learn">Learn more</a>
             </div>
                     <div  class="tri">
-                        <img src="./Vector 2.svg">
+                        <img src="./Images/Vector 2.svg">
                     </div>
                     <div class="frame">
                     <div class="string">
-                    <img src="./Frame 1000001716.svg"/>
+                    <img src="./Images/Frame 1000001716.svg"/>
                     </div>
                     <p class="inbox">Seamlessly transform your long URLs into concise and shareable links with just few clicks.</p>
                 </div>
-                    <img src="./Rectangle 9.png" class="rec">
-                    <img src="./Ellipse 1.svg" class="eli">
+                    <img src="./Images/Rectangle 9.png" class="rec">
+                    <img src="./Images/Ellipse 1.svg" class="eli">
                     
         </header>
         <div class="line">
@@ -60,7 +60,7 @@
         </div>
         <div class="choose">
             <div class="scissors">
-                <img src="./Line 70.svg"> 
+                <img src="./Images/Line 70.svg"> 
                 <div>
                     <p class="why"> Why choose <span class="url">Scissors</span></p>
                     <p class="usage">Scissors is the hub of everything that has to do with your link management. 
@@ -73,14 +73,14 @@
                 <div class="first">
                     <div>
                         <div class="icon">
-                        <img src="./link-2.svg">
+                        <img src="./Images/link-2.svg">
                        </div>
                         <p class="short">URL Shortening</p>
                         <p class="usage">Scissor allows you to shorten URLs of your business, events. Shorten your URL at scale, URL redirects.</p>
                     </div>
                     <div>
                         <div class="icon">
-                        <img src="./edit.png">
+                        <img src="./Images/edit.png">
                         </div>
                         <p class="short">Custom URLs</p>
                         <p class="usage">With Scissor, you can create custom URLs, with the length you want! 
@@ -90,7 +90,7 @@
                 <div class="second">
                     <div>
                         <div class="icon">
-                        <img src="./grid.png">
+                        <img src="./Images/grid.png">
                         </div>
                         <p class="short">QR Codes</p>
                         <p class="usage">Generate QR codes to your business, events. Bring your audience and customers 
@@ -98,7 +98,7 @@
                     </div>
                     <div>
                         <div class="icon">
-                        <img src="./activity.svg">
+                        <img src="./Images/activity.svg">
                         </div>
                         <p class="short">Data Analytics</p>
                         <p class="usage">Receive data on the usage of either your shortened URL,
@@ -108,7 +108,7 @@
         </div>
         </div>
         <div class="perfect">
-        <img src="./Line 70.svg">
+        <img src="./Images/Line 70.svg">
         <p class="price">A <span class="url">price perfect</span> for your needs.</p>
         <p class="personal">From catering for your personal, business, event, socials needs, you can be rest assured we have you in mind in our pricing.</p>
     </div>
@@ -117,33 +117,33 @@
             <p class="basic">Basic</p>
             <p class="free">Free</p>
             <p class="plan">Free plan for all users</p>
-            <img src="./check-circle.svg"> Unlimited URL Shortening<br>
-            <img src="./check-circle.svg"> Basic Link Analytics<br>
-            <img src="./check-circle.svg"> Customizable Short Links<br>
-            <img src="./check-circle.svg"> Standard Support<br>
-            <img src="./check-circle.svg"> Ad-supported
+            <img src="./Images/check-circle.svg"> Unlimited URL Shortening<br>
+            <img src="./Images/check-circle.svg"> Basic Link Analytics<br>
+            <img src="./Images/check-circle.svg"> Customizable Short Links<br>
+            <img src="./Images/check-circle.svg"> Standard Support<br>
+            <img src="./Images/check-circle.svg"> Ad-supported
         </div>
         <div class="card2">
             <p class="prof">Professional</p>
             <p class="doll">$15/month</p>
             <p class="ideal">Ideal for business creators</p>
             <div class="ecap">
-            <img src="./check-circle (1).png"> Enhanced Link Analytics<br>
-            <img src="./check-circle (1).png"> Custom Branded Domains<br>
-            <img src="./check-circle (1).png"> Advanced Link Customization<br>
-            <img src="./check-circle (1).png"> Priority Support<br>
-            <img src="./check-circle (1).png"> Ad-free Experience<br>
+            <img src="./Images/check-circle (1).png"> Enhanced Link Analytics<br>
+            <img src="./Images/check-circle (1).png"> Custom Branded Domains<br>
+            <img src="./Images/check-circle (1).png"> Advanced Link Customization<br>
+            <img src="./Images/check-circle (1).png"> Priority Support<br>
+            <img src="./Images/check-circle (1).png"> Ad-free Experience<br>
         </div>
       </div>
         <div class="card3">
             <p class="basic">Teams</p>
             <p class="free">$25/month</p>
             <p class="plan">Share with up to 10 users</p>
-            <img src="./check-circle.svg"> Team Collaboration<br>
-            <img src="./check-circle.svg"> User Roles and Permissions<br>
-            <img src="./check-circle.svg"> Enhanced Security<br>
-            <img src="./check-circle.svg"> API Access<br>
-            <img src="./check-circle.svg"> Dedicated Account Manager<br>
+            <img src="./Images/check-circle.svg"> Team Collaboration<br>
+            <img src="./Images/check-circle.svg"> User Roles and Permissions<br>
+            <img src="./Images/check-circle.svg"> Enhanced Security<br>
+            <img src="./Images/check-circle.svg"> API Access<br>
+            <img src="./Images/check-circle.svg"> Dedicated Account Manager<br>
         </div>
     </div>
     <div class="pricing">
@@ -159,12 +159,12 @@
                     </select>
                     <input type="text" placeholder="Type Alias here" class="alias">
             </div>
-            <button class="button">Trim URL <img src="./magic wand.png"></button>
+            <button class="button">Trim URL <img src="./Images/magic wand.png"></button>
             <p class="trim">By clicking TrimURL, I agree to the  <span style="font-size: 16px;">Terms of Service, Privacy Policy</span> and Use of Cookies.</p>
         </form>
     </div>
         <div class="accordion">
-        <img src="./Line 70.svg">
+        <img src="./Images/Line 70.svg">
         <p class="faq">FAQs</p>
             <div class="accordion-header">
                 How does URL shortening work?
@@ -193,7 +193,7 @@
     <footer>
         <div class="footer">
         <div class="sci">
-        <img src="./Vector.png"> <img src="./Vector 2.png"> <img src="./SCISSOR.png">
+        <img src="./Images/Vector.png"> <img src="./Images/Vector 2.png"> <img src="./Images/SCISSOR.png">
         </div>
         <p>
             <span class="question">Why Scissors?</span>
