--- a/test.html
+++ b/test.html
@@ -4,6 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Assignment</title>
         <link rel="stylesheet" href="test.css"/>
+        <link href="https://fonts.cdnfonts.com/css/gilroy-Bold" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/gilroy-Medium" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/gilroy-SemiBold" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -167,22 +170,36 @@
         <img src="./Images/Line 70.svg">
         <p class="faq">FAQs</p>
             <div class="accordion-header">
-                How does URL shortening work?
+            <div>How does URL shortening work? <img src="./Images/minus.png" class="minus"></div>
             <div class="accordion-body">
                     URL shortening works by taking a long URL and creating a shorter, condensed version that redirects to the original URL. 
                     When a user clicks on the shortened link, they are redirected to the intended destination.
             </div>
         </div>
         <div class="accordion-header">
-               <p>Is it necessary to create an account to use the URL shortening service?</p>
-               <p>Are the shortened links permanent? Will they expire?</p>
-                <p>Are there any limitations on the number of URLs I can shorten?</p>
-                <p>Can I customize the shortened URLs to reflect my brand or content?</p>
-                <p>Can I track the performance of my shortened URLs?</p>
-                <p>How secure is the URL shortening service? Are the shortened links protected against spam or malicious activity?</p>
-                <p>What is a QR code and what can it do?</p>
-                <p>Is there an API available for integrating the URL shortening service into my own applications or websites?</p>
-            </div>
+                <div><p>Is it necessary to create an account to use the URL shortening service?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>Are the shortened links permanent? Will they expire?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>Are there any limitations on the number of URLs I can shorten?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>Can I customize the shortened URLs to reflect my brand or content?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>Can I track the performance of my shortened URLs?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>How secure is the URL shortening service? Are the shortened links protected against spam or malicious activity?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>What is a QR code and what can it do?</p><img src="./Images/plus.png" class="plus"></div>
+                </div>
+                <div class="accordion-header">
+                <div><p>Is there an API available for integrating the URL shortening service into my own applications or websites?</p><img src="./Images/plus.png" class="plus"></div>
+               </div>
         </div>
         <div class="rev">
             <div class="rlo">
@@ -193,27 +210,89 @@
     <footer>
         <div class="footer">
         <div class="sci">
-        <img src="./Images/Vector.png"> <img src="./Images/Vector 2.png"> <img src="./Images/SCISSOR.png">
+        <img src="./Images/Logo.png">
+        <img src="./Images/socials.png">
         </div>
-        <p>
+        <div class="end">
+            <div class="top">
+        <div>
             <span class="question">Why Scissors?</span>
-        </p>
-        <p>
-            Scissors
-        </p>
-        <p>
-            Products
-        </p>
-        <p>
-            Resources
-        </p>
-        <p>
-            Features
-        </p>
-        <p>
-            Legal
-        </p>
+            <div class="int">
+                Scissor 101</br>
+                Integrations & API</br>
+                Pricing
+            </div>
+        </div>
+        <div>
+            <span class="question">Solutions</span>
+            <div class="int">
+                Social Media</br>
+                Digital Marketing</br>
+                Customer Service
+                For Developers
+            </div>
+        </div>
+        <div>
+            <span class="question">Products</span>
+            <div class="int">
+                Link Management</br>
+                QR Codes</br>
+                Link-in-bio
+            </div>
+        </div>
+        <div>
+            <span class="question">Company</span>
+            <div class="int">
+                About Scissor</br>
+                Careers</br>
+                Partners</br>
+                Press</br>
+                Contact</br>
+                Reviews
+            </div>
+        </div>
     </div>
+
+
+        <div class="bottom">
+        <div>
+            <span class="question">Resources</span>
+            <div class="int">
+                Blog</br>
+                Resource Library</br>
+                Developers</br>
+                App Connectors</br>
+                Support</br>
+                Trust Center</br>
+                Browser Extension</br>
+                Mobile App</br>
+            </div>
+        </div>
+        <div>
+            <span class="question">Features</span>
+            <div class="int">
+                Branded Links</br>
+                Mobile Links</br>
+                Campaign</br>
+                Management &</br>
+                Analytics</br>
+                QR Code generation
+            </div>    
+        </div>
+        <div>
+            <span class="question">Legal</span>
+            <div class="int">
+                Privacy Policy</br>
+                Cookie Policy</br>
+                Terms of Service</br>
+                Acceptable Use Policy</br>
+                Code of Conduct
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        <p class="terms">Term of Service | Security | <span class="serv">Scissor 2023</span></p>
     </footer>
     </body>
 </html>
