--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Assignment</title>
-        <link rel="stylesheet" href="test.css"/>
+        <link rel="stylesheet" href="index.css"/>
         <link href="https://fonts.cdnfonts.com/css/gilroy-Bold" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/gilroy-Medium" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/gilroy-SemiBold" rel="stylesheet">
